home-page sections

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,17 @@
 @import '../styles/base/reset';
 @import '../styles/base/typography';
 
-// // Components
-// @import '../components/ui/button/';
-// @import './components/cards';
+@import "tailwindcss";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
