--- a/src/components/ui/mobile-menu/mobileMenu.module.scss
+++ b/src/components/ui/mobile-menu/mobileMenu.module.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 @use "../../../styles/abstract/variables" as *;
 @use "../../../styles/abstract/mixins" as *;
 
@@ -137,7 +138,7 @@
   transition: all 0.3s ease;
 
   &:hover {
-    background-color: darken($primary-blue, 10%);
+background-color: color.adjust($primary-blue, $lightness: -10%);
   }
 }
 
