--- a/src/sections/about-us/aboutUs.module.scss
+++ b/src/sections/about-us/aboutUs.module.scss
@@ -1,4 +1,5 @@
 // components/AboutSection.module.scss
+@use "sass:color";
 @use "../../styles/abstract/variables" as *;
 @use "../../styles/abstract/mixins" as *;
 
@@ -6,7 +7,7 @@
   position: relative;
   padding: 8rem 0;
   overflow: hidden;
-  background: linear-gradient(to bottom, $primary-dark, darken($primary-dark, 5%));
+background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark, $lightness: -5%));
 
   .background {
     position: absolute;
