--- a/src/sections/services/services.module.scss
+++ b/src/sections/services/services.module.scss
@@ -1,12 +1,14 @@
-// components/ServicesSection.module.scss
+@use "sass:color";
 @use "../../styles/abstract/variables" as *;
 @use "../../styles/abstract/mixins" as *;
 
 .services {
   position: relative;
   padding: 8rem 0;
-  background: linear-gradient(to bottom, darken($primary-dark, 8%), darken($primary-dark, 10%));
-  overflow: hidden;
+background: linear-gradient(to bottom, 
+  color.adjust($primary-dark, $lightness: -8%), 
+  color.adjust($primary-dark, $lightness: -10%));
+    overflow: hidden;
 
   .background {
     position: absolute;
