--- a/src/components/ui/navbar/navbar.module.scss
+++ b/src/components/ui/navbar/navbar.module.scss
@@ -72,9 +72,10 @@
 
     @include respond-to(tablet) {
       position: fixed;
-      top: 5.5rem;
+      top: 4.5rem;
       left: 0;
       width: 100%;
+      height: 100vh;
       flex-direction: column;
       align-items: center;
       gap: 1.5rem;
