--- a/src/sections/about-us/aboutUs.module.scss
+++ b/src/sections/about-us/aboutUs.module.scss
@@ -5,7 +5,7 @@
 
 .about {
   position: relative;
-  padding: 8rem 0;
+  padding: 4rem 0;
   overflow: hidden;
 background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark, $lightness: -5%));
 
@@ -22,12 +22,12 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
       position: absolute;
       border-radius: 50%;
       filter: blur(60px);
-    //   opacity: 0.15;
 
       &:first-child {
         width: 300px;
         height: 300px;
         background: $primary-blue;
+        opacity: 0.2;
         top: -100px;
         right: -100px;
         animation: float 15s ease-in-out infinite;
@@ -37,6 +37,7 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
         width: 400px;
         height: 400px;
         background: $accent-green;
+        opacity: 0.2;
         bottom: -150px;
         left: -150px;
         animation: float 20s ease-in-out infinite reverse;
@@ -56,12 +57,10 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
   .header {
     margin-bottom: 5rem;
     text-align: center;
-    // opacity: 0;
     transform: translateY(30px);
     transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
 
     .visible & {
-    //   opacity: 1;
       transform: translateY(0);
     }
   }
@@ -141,7 +140,8 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
     margin-top: 2rem;
 
     @include respond-to(mobile) {
-      flex-direction: column;
+flex-direction: column;
+
     }
   }
 
@@ -171,6 +171,7 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
     &:nth-child(3) {
       transition-delay: 0.3s;
     }
+
   }
 
   .statNumber {
@@ -291,8 +292,35 @@ background: linear-gradient(to bottom, $primary-dark, color.adjust($primary-dark
   }
 }
 
-@keyframes countUp {
-  to {
-    // opacity: 1;
-  }
+    @include respond-to(mobile) {
+     .background{
+      height: 70%;
+     }
+     .orb{
+      display: none;
+     }
+.about{
+  padding: 2rem 0;
 }
+.paragraph{
+  text-align: center;
+}
+.container{
+  padding: 0 1rem;
+}
+.featureCard{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cardDescription{
+  text-align: center;
+}
+    .titleLine{
+      font-size: 1.5rem;
+    }
+    .titleLineAccent{
+      font-size: 1.5rem;
+    }
+    }
