--- a/src/sections/hero-section/heroSection.module.scss
+++ b/src/sections/hero-section/heroSection.module.scss
@@ -1,9 +1,13 @@
 // components/HeroSection.module.scss
 @use 'sass:math';
+@use "sass:color";
+@use "../../styles/abstract/variables" as *;
+@use "../../styles/abstract/mixins" as *;
 
 .hero {
   position: relative;
   height: 100vh;
+  width: 100%;
   min-height: 800px;
   overflow: hidden;
   display: flex;
@@ -28,7 +32,6 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
   z-index: 0;
 }
@@ -76,6 +79,10 @@
   gap: 1.5rem;
   justify-content: center;
   animation: fadeIn 1s ease-out 0.9s both;
+
+    @include respond-to(mobile) {
+      flex-direction: column;
+    }
 }
 
 .ctaPrimary, .ctaSecondary {
@@ -195,3 +202,13 @@
     opacity: 1;
   }
 }
+
+    @include respond-to(mobile) {
+      .content{
+        padding: 1rem;
+      }
+      .hero{
+  width: 100%;
+  padding-top: 40px;
+  min-height: 650px;      }
+    }
