--- a/src/sections/why-us/whyUs.module.scss
+++ b/src/sections/why-us/whyUs.module.scss
@@ -22,8 +22,6 @@ background: linear-gradient(to bottom,
       position: absolute;
       border-radius: 50%;
       filter: blur(80px);
-    //   opacity: 0.1;
-
       &:first-child {
         width: 400px;
         height: 400px;
@@ -57,12 +55,10 @@ background: linear-gradient(to bottom,
   .header {
     margin-bottom: 5rem;
     text-align: center;
-    // opacity: 0;
     transform: translateY(30px);
     transition: all 0.8s cubic-bezier(0.16, 1, 0.3, 1);
 
     .visible & {
-    //   opacity: 1;
       transform: translateY(0);
     }
   }
@@ -125,11 +121,9 @@ background: linear-gradient(to bottom,
     overflow: hidden;
     backdrop-filter: blur(5px);
     transform: translateY(30px);
-    // opacity: 0;
     transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
 
     .visible & {
-    //   opacity: 1;
       transform: translateY(0);
     }
 
@@ -178,8 +172,7 @@ background: linear-gradient(to bottom,
     width: 100%;
     height: 100%;
     background: radial-gradient(circle, rgba($accent-green, 0.5), transparent 70%);
-    // opacity: 0;
-    // transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease;
   }
 
   .cardTitle {
@@ -204,19 +197,19 @@ background: linear-gradient(to bottom,
     width: 100%;
     height: 100%;
     background: radial-gradient(circle at center, rgba($accent-green, 0.1), transparent 70%);
-    // opacity: 0;
-    // transition: opacity 0.3s ease;
+    transition: opacity 0.3s ease;
     z-index: -1;
   }
 
   .ctaContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    // opacity: 0;
     transform: translateY(20px);
     transition: all 0.6s 0.6s cubic-bezier(0.16, 1, 0.3, 1);
 
     .visible & {
-    //   opacity: 1;
       transform: translateY(0);
     }
   }
